Resolves: fdo#58730 workaround [UL|LR]Space 100% problem

If all paragraph margins are 100% on import, ignore that as being the implicit
default. That avoids explicit 100% being set onto the awesome [UL|LR]Space
which takes a relative propsize of 100% as a flag that its value field is
absolute and so rejected by SwTxtFmtColl::Modify as a candidate for getting its
true value initialized relative to its parent, so it ends up as an absolute 0

If all paragraph margins are 100% on export, then elide the property as being
the implicit default.

Trigged by 3c5facfce42a0dbe362d6b9fa5ac374fd76f51a1

Change-Id: I55f6ceeae287b7d8e99befa4bd3cc06738a21299